# mcp-project_mapper

./: LICENSE  README.md  pyproject.toml
src/mcp_folder_mapper/: mapper.py  server.py
